# kingyo

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  client.yml  server.yml
.husky/: pre-commit
client/: .gitignore  .stylelint.config.json  .stylelintignore  Dockerfile  eslint.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
client/src/: main.ts
client/src/assets/: main.css
client/src/components/: DoughnutChart.vue  FileUploadDialog.vue  HeaderComponent.vue  LogoComponent.vue  SelectWrapperComponent.vue  TitleComponent.vue
client/src/composables/: useApi.ts  useTestCaseQuery.ts  useTestPlanQuery.ts  useTestResultQuery.ts  useTestResultStepAttachmentQuery.ts  useTestResultStepQuery.ts  useTestStepAttachmentQuery.ts  useTestStepEditor.ts  useTestStepQuery.ts  useTokenApi.ts  useUserQuery.ts
client/src/consts/: index.ts
client/src/layouts/: DefaultLayout.vue
client/src/router/: index.ts
client/src/services/: runtime.ts
client/src/tests/: setup.ts
client/src/types/: router.d.ts
server/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  schema.yaml
server/server/: settings.py  urls.py
server/testplan/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
server/testplan/management/commands/: seed.py
server/testplan/migrations/: 0001_initial.py
server/testplan/tests/: __init__.py  test_apis.py  test_filters.py  test_models.py
(+70 files in other folders)
