[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.4",
  "pre-commit>=4.2.0",
  "pyrefly>=0.24.2",
  "ruff>=0.12.4",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]
