[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.4",
  "django-cors-headers>=4.7.0",
  "django-environ>=0.12.0",
  "django-extensions>=4.1",
  "django-filter>=25.1",
  "djangorestframework>=3.16.1",
  "drf-spectacular>=0.28.0",
  "faker>=37.5.3",
  "pre-commit>=4.2.0",
  "psycopg[binary]>=3.2.9",
  "pydotplus>=2.0.2",
  "ruff>=0.12.4",
]
