[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.40.21",
  "django>=5.2.4",
  "django-cleanup>=9.0.0",
  "django-cors-headers>=4.7.0",
  "django-environ>=0.12.0",
  "django-extensions>=4.1",
  "django-filter>=25.1",
  "django-storages>=1.14.6",
  "djangorestframework>=3.16.1",
  "djangorestframework-simplejwt>=5.5.1",
  "drf-spectacular>=0.28.0",
  "faker>=37.5.3",
  "pre-commit>=4.2.0",
  "psycopg[binary]>=3.2.9",
  "pydotplus>=2.0.2",
  "ruff>=0.12.4",
]
